fix: layout issues with ckeditor

--- a/frontend/src/pages/Create/CreateContent/styles.scss
+++ b/frontend/src/pages/Create/CreateContent/styles.scss
@@ -1,16 +1,14 @@
 #cke_editor1 {
-
-  margin-top: -100px;
-
   #cke_1_contents {
     background: var(--green);
     height: 50vh !important;
-    //height: 500px;
   }
 
-  @media(max-width:360px){
-    margin-top: 150px;
+  @media(max-width:400px){
+    max-height: 400px;
+    overflow-y: scroll;
   }
+
 }
 
 .buttons-container {
@@ -18,7 +16,7 @@
   flex-direction: row;
   width: 100%;
   max-width: 1200px;
-  justify-content: space-between;
+  justify-content: center;
   margin-top: 30px;
 
   button {
