--- a/frontend/src/pages/Create/styles.scss
+++ b/frontend/src/pages/Create/styles.scss
@@ -24,13 +24,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   align-self: center;
   width: 100%;
   height: 90vh;
+  max-height: 90vh;
 
   h1 {
-    margin-bottom: 30px;
     text-align: center;
   }
 
